# Linkedin-SC

./: .gitignore  CLAUDE.md  Dockerfile.backend  Makefile  conductor.json  package-lock.json  setup-workspace.sh
.archive/: LinkedinSC-Makefile
LinkedinSC/: .gitignore  LINKEDIN_URL_PATTERNS.md  LinkedInNextStep.md  SETUP.md  package-lock.json
LinkedinSC/.git_backup/: config  index  packed-refs
LinkedinSC/backend/: main.py  models.py  pytest.ini  requirements-dev.txt  requirements.txt  test_serp_fields.py
LinkedinSC/frontend/: AGENTIC_QUERY_BUILDER_SUMMARY.md  components.json  package-lock.json  package.json  vitest.config.ts
agent-sdk/: README.md  REFACTORING_FINDINGS.md  __init__.py  agent.py  expansion_prompt.py  generator.py  prompts.py  run_test.py  schemas.py  simple_schemas.py  test_example.py  test_generator.py  test_output.json  test_team.py
agent-sdk/_deprecated/: team.py
agent-sdk/agents/: __init__.py  brainstormer.py  scorer.py
agent-sdk/api/: __init__ 2.py  main.py  models.py  requirements.txt
crawl4ai/: brightdata_example.py  serp_Python_machine_learning_librar_20251101_034342.json  simple_examples.py
serp-api-aggregator/: .bumpversion.cfg  .env.example  CLAUDE.md  pyproject.toml
serp-api-aggregator/.git_backup/: HEAD  config  index  packed-refs
serp-api-aggregator/.git_backup/objects/pack/: pack-90dd5e76196b555bf1d5d836458861d790016c89.idx  pack-90dd5e76196b555bf1d5d836458861d790016c89.pack  pack-90dd5e76196b555bf1d5d836458861d790016c89.rev
serp-api-aggregator/.git_backup/refs/heads/: refactor-scripts
serp-api-aggregator/.git_backup/refs/remotes/origin/: HEAD
serp-api-aggregator/src/: CLAUDE.md
serp-api-aggregator/src/serp/: __init__.py  cache.py  client.py  exceptions.py  models.py  progress.py  rate_limiter.py  settings.py
serp-api-aggregator/src/serp/_internal/: __init__.py  bright_data.py
serp-api-aggregator/src/serp/api/: __init__.py  deps.py  main.py  routes.py
serp-api-aggregator/src/serp/cli/: __init__.py  debug.py  main.py
serp-api-aggregator/tests/: CLAUDE.md  test_serp.py
(+214 files in other folders)
