[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serp-aggregator"
version = "0.3.0"
description = "Async Python library for SERP data aggregation via Bright Data API"
readme = "src/README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Denny Leonardo" }
]
keywords = ["serp", "search", "seo", "bright-data", "api", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
]
cache = [
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aioresponses>=0.7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "serp-aggregator[cli,api,cache]",
]

[project.scripts]
serp = "serp.cli.main:main"

[project.urls]
Homepage = "https://github.com/your-username/serp-aggregator"
Documentation = "https://github.com/your-username/serp-aggregator#readme"
Repository = "https://github.com/your-username/serp-aggregator"

[tool.hatch.build.targets.wheel]
packages = ["src/serp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
